[gd_scene load_steps=11 format=3 uid="uid://drtd5a4mjfa2j"]

[ext_resource type="PackedScene" uid="uid://cv8o7ubf2m0b1" path="res://scenes/tower.tscn" id="1_cpxyw"]
[ext_resource type="Script" uid="uid://b87tcn68jbjlp" path="res://scenes/towers/discus/discus_tower.gd" id="2_ft8ev"]
[ext_resource type="Texture2D" uid="uid://k25y6737py8m" path="res://art/fish/aquarium/Discus.png" id="2_tkb53"]
[ext_resource type="Texture2D" uid="uid://4g2rv0remi3q" path="res://art/effects/magic_03.png" id="3_4u0d7"]
[ext_resource type="AudioStream" uid="uid://c2w0ixaek7nit" path="res://audio/sfx/discus_attack.mp3" id="3_ft8ev"]

[sub_resource type="Animation" id="Animation_i27xe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Magic03:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.9843137, 0.2784314, 0.2784314, 1)]
}

[sub_resource type="Animation" id="Animation_58roq"]
resource_name = "target_found"
length = 0.65
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Magic03:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.44313726, 1, 1, 1), Color(0.9843137, 0.2784314, 0.2784314, 1), Color(0.44313726, 1, 1, 1), Color(0.9843137, 0.2784314, 0.2784314, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mbftx"]
_data = {
&"RESET": SubResource("Animation_i27xe"),
&"target_found": SubResource("Animation_58roq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_lxglw"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jwqmv"]
radius = 21.0

[node name="Tower" instance=ExtResource("1_cpxyw")]
script = ExtResource("2_ft8ev")
range = Array[Vector2]([Vector2(-2, -2), Vector2(0, -2), Vector2(2, -2), Vector2(2, 0), Vector2(2, 2), Vector2(0, 2), Vector2(-2, 2), Vector2(-2, 0)])
attack_speed = 0.8
cost = 500
fish_name = "Discus"
attack_sound = ExtResource("3_ft8ev")
fish_texture = ExtResource("2_tkb53")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_tkb53")

[node name="CollisionShape2D" parent="." index="1"]
visible = false

[node name="TargetArea" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 64

[node name="Magic03" type="Sprite2D" parent="TargetArea" index="0"]
modulate = Color(0.9843137, 0.2784314, 0.2784314, 1)
scale = Vector2(0.023448667, 0.023448667)
texture = ExtResource("3_4u0d7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TargetArea" index="1"]
libraries = {
&"": SubResource("AnimationLibrary_mbftx")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea" index="2"]
shape = SubResource("CircleShape2D_lxglw")

[node name="AoeArea" type="Area2D" parent="TargetArea" index="3"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea/AoeArea" index="0"]
shape = SubResource("CircleShape2D_jwqmv")
